@@ -12,7 +12,7 @@ imports Main
 begin
 
 nitpick_params [card = 1\<midarrow>6, max_potential = 0,
-                sat_solver = MiniSat_JNI, max_threads = 1, timeout = 60 s]
+                sat_solver = MiniSat_JNI, max_threads = 1, timeout = 60]
 
 record point2d =
   xc :: int
